fix: wow mobile

--- a/src/components/_scripts.html
+++ b/src/components/_scripts.html
@@ -5,5 +5,12 @@
 <script>
     new WOW().init();
 </script>
+<script>
+    wow = new WOW({
+
+        mobile: false
+    })
+    wow.init();
+</script>
 <script src="js/main.min.js"></script>
 <script src="js/myjs.min.js"></script>
